Animate stars initialization and fixes canvas size on mobile.

--- a/src/components/app/app.styles.scss
+++ b/src/components/app/app.styles.scss
@@ -14,6 +14,22 @@
     align-items: center;
     justify-content: center;
     background: var(--galaxyBackground, black);
+
+    &::before {
+      content: '';
+      position: fixed;
+      inset: 0;
+      background: var(--galaxyBackground, black);
+      transition: background linear 3s;
+    }
+
+    &#{$root}--isLoading::before {
+      background: transparent;
+    }
+
+    &#{$root}--isInitialized::before {
+      content: none;
+    }
   }
 
   &__canvas {
